<resources>
    <string name="app_name">瀚方</string>
    <string name="version">1.4</string>
    <string name="loading">正在加载…</string>
    <string name="just_now">刚刚</string>
    <string name="sec_before">%d秒前</string>
    <string name="min_before">%d分钟前</string>
    <string name="today">今天%tR</string>
    <string name="yesterday">昨天%tR</string>
    <string name="mill" translatable="false">%tc</string>
    <string name="tab_menu_wendu">温度</string>
    <string name="tab_menu_shijian">时间</string>
    <string name="tab_menu_fengsu">速度</string>
    <string name="toast_yzm_1">验证码为空,请重新填写验证码</string>
    <string name="toast_yzm_2">网络连接异常</string>
    <string name="plz_input_pwd_again">请再次输入密码</string>
    <string name="pwd_input_diff">两次输入的密码不一致</string>
    <string name="no_set">未设置</string>
    <string name="cancel">取消</string>
    <string name="email_already_register">账号已被注册</string>
    <string name="register_failure">注册失败,请检查注册信息</string>
    <string name="register_success_plz_check_email">注册成功，请注意查收验证邮件</string>
    <string name="register_now">正在注册…</string>
    <string name="change_now">正在修改…</string>
    <string name="email_pwd_input_err">邮箱／密码错误</string>
    <string name="email_need_check">邮箱未验证，请验证邮箱后登录</string>
    <string name="reset_password">重置密码</string>
    <string name="send_reset_pwd_info">正在发送重置请求…</string>
    <string name="already_send_reset_email">已发送验证邮件到您的邮箱，根据邮箱提示操作即可</string>
    <string name="email_address_err">邮箱信息校验出错</string>
    <string name="search">搜寻</string>
    <string name="concern_us">关注我们</string>
    <string name="count_number">口数</string>
    <string name="notes">备注</string>
    <string name="notification">提醒</string>
    <string name="evaluate">评价</string>
    <string name="set">设定</string>
    <string name="common_set">通用指数</string>
    <string name="product_select">产品选择</string>
    <string name="v" translatable="false">V</string>
    <string name="t" translatable="false">T</string>
    <string name="h" translatable="false">H</string>
    <string name="temp_unit" translatable="false">℃</string>
    <string name="p" translatable="false">P</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="shake">震动</string>
    <string name="user_use_number">口数</string>
    <string name="temp">温度</string>
    <string name="power_time">充电时间</string>
    <string name="power_count">充电次数</string>
    <string name="dcv">电压</string>
    <string name="ota">固件升级</string>
    <string name="app_user_info">账户信息</string>
    <string name="plz_input_new_pwd_again">请再次输入新密码</string>
    <string name="plz_input_new_pwd">请输入新密码</string>
    <string name="plz_input_old_pwd">请输入旧密码</string>
    <string name="change_pwd_success">密码修改成功</string>
    <string name="change_pwd_failure">密码修改失败</string>
    <string name="change_pwd_now">正在修改密码…</string>
    <string name="vibration">震动</string>
    <string name="work_time_set">单循环工作时间</string>
    <string name="temp_set">温度设定</string>
    <string name="parameter_not_null">参数不能为空</string>
    <string name="every_day_use_num_plan">每日口数计划</string>
    <string name="loop_use_num_plan">每循环口数计划</string>
    <string name="use_num_plan_suggest">，建议值在</string>
    <string name="between">之间</string>
    <string name="plz_set_price">请设置价格</string>
    <string name="loop_time">单循环时间</string>
    <string name="m" translatable="false">M</string>
    <string name="s" translatable="false">S</string>
    <string name="smoke_price">一包烟的价格</string>
    <string name="money_type">币种</string>
    <string name="www_ciggo_com" translatable="false">www.ciggo.com</string>
    <string name="send">发送</string>
    <string name="plz_input_user_feedback">请输入您的反馈</string>
    <string name="plz_input_feedback">请输入反馈内容</string>
    <string name="send_feedback_msg_success">感谢您的反馈，我们会悉心听取您的意见。</string>
    <string name="send_feedback_msg_failure">反馈提交失败，请重试</string>
    <string name="company_name" translatable="false">葆威道科技有限公司</string>
    <string name="all_sum_num">总计节省费用</string>
    <string name="save">省钱</string>
    <string name="every_month">每月</string>
    <string name="every_week">每周</string>
    <string name="every_day">每天</string>
    <string name="use_num_plan_warning">口数计划警告</string>
    <string name="surplus_num">剩余口数</string>
    <string name="charge_maintenance">充电维护</string>
    <string name="clean">清洁</string>
    <string name="have_clean">已经清洁？</string>
    <string name="have_charge">已经充电？</string>
    <string name="need_charge">需要充电</string>
    <string name="low_power_waining">低压警告</string>
    <string name="vapor_meet">vapor meet</string>
    <string name="vape_world">vape world</string>
    <string name="use_product_name">使用产品名称</string>
    <string name="email">邮箱</string>
    <string name="log_out">注销登录</string>
    <string name="confirm_log_out_app">确定退出当前登录账号？</string>
    <string name="confirm_validate">30日免验证期限已到,请立即前往验证</string>
    <string name="tip_validate">账号信息需要验证,通过以后方可使用该功能</string>
    <string name="unbind_device">解绑设备</string>
    <string name="usd">美元</string>
    <string name="rmb">人民币</string>
    <string name="hk">港币</string>
    <string name="sure">确定</string>
    <string name="roger">知道了</string>
    <string name="telphone">电话号码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="validate">验证</string>
    <string name="grregister">个人注册</string>
    <string name="jgregister">单位注册</string>
    <string name="text_agreement_tips">我已阅读并接受瀚方</string>
    <string name="text_agreement_myz_tips">我要开启30天免验证</string>
    <string name="text_agreement"> 《服务条款》 </string>
    <string name="text_user_agreement"> 服务条款 </string>
    <string name="fragme_personinfo">个人信息</string>
    <string name="fragme_device">设备</string>
    <string name="account_info">账号信息</string>
    <string name="fragme_data">数据</string>
    <string name="fragme_about">关于</string>
    <string name="fragme_exit">退出登陆</string>
    <string name="account_validate">账号验证</string>
    <string name="organization_name1">单位名称</string>
    <string name="legal_representative1">法人代表</string>
    <string name="personinfo_head1">负责人</string>
    <string name="registration_mark1">执照号</string>
    <string name="address1">地址</string>
    <string name="organization_name">单位名称:</string>
    <string name="legal_representative">法人代表:</string>
    <string name="personinfo_head">负责人:</string>
    <string name="registration_mark">执照号:</string>
    <string name="address">地址:</string>
    <string name="plz_input_organization_name">请输入单位名称</string>
    <string name="plz_input_legal_representative">请输入法人代表</string>
    <string name="plz_input_personinfo_head">请输入负责人</string>
    <string name="plz_input_registration_mark">请输入执照号</string>
    <string name="plz_input_address">请输入地址</string>
    <string name="person_name">姓名:</string>
    <string name="person_sex">性别:</string>
    <string name="person_age">年龄:</string>
    <string name="person_height">身高:</string>
    <string name="person_weight">体重:</string>
    <string name="person_name1">姓名</string>
    <string name="person_sex1">性别</string>
    <string name="person_age1">年龄</string>
    <string name="person_height1">身高</string>
    <string name="person_weight1">体重</string>
    <string name="plz_input_person_name">请输入姓名</string>
    <string name="plz_input_person_sex">性别</string>
    <string name="plz_input_person_age">年龄</string>
    <string name="plz_input_person_height">身高</string>
    <string name="plz_input_person_weight">体重</string>
    <string name="change_pwd">更改密码</string>
    <string name="change">修改</string>
    <string name="device_setting">设置</string>
    <string name="edit">编辑</string>
    <string name="device_save">保存</string>
    <string name="device_save_success">保存成功</string>
    <string name="device_save_fail">保存失败</string>
    <string name="device_add_fail">设备添加失败</string>
    <string name="selected_device">选择设备</string>
    <string name="please_enable_the_bluetooth">请打开蓝牙</string>
    <string name="device_not_connected">请先连接设备</string>
    <string name="code_not_scan">请扫描产品码</string>
    <string name="product_code">产品码:</string>
    <string name="already_bind">已经绑定了设备</string>
    <string name="searching">正在搜索…</string>
    <string name="search_again">重试</string>
    <string name="confirm_unbind_device">确认解绑当前设备？</string>
    <string name="connect_device">连接设备</string>
    <string name="scan">扫描</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="plz_input_phone">请输入手机号码</string>
    <string name="plz_phone_format">请输入正确的手机号码</string>
    <string name="plz_input_yzm">请输入验证码</string>
    <string name="code_error">验证码错误</string>
    <string name="plz_input_email">请输入邮箱</string>
    <string name="plz_input_pwd">请输入密码</string>
    <string name="plz_input_oldpwd">请输入旧密码</string>
    <string name="plz_input_newpwd">请输入新密码</string>
    <string name="plz_error_oldpwd">旧密码输入错误</string>
    <string name="login_now">正在登录…</string>
    <string name="confirm">确认</string>
    <string name="input_pwd">密码(6-12位数字字母组合)</string>
    <string name="input_new_pwd">新密码(6-12位字母和数字组合)</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="register_success_plz_check_phone">注册成功</string>
    <string name="phone_already_register">该号码已被注册</string>
    <string name="and" translatable="false"><![CDATA[&]]></string>
    <string name="pwd_again">确认新密码</string>
    <string name="pwd_new">新密码</string>
    <string name="pwd_old">旧密码</string>
    <string name="username_reset">需要重置密码的账号</string>
    <string name="pwd_reset">重置密码</string>
    <string name="receive_code">输入验证码</string>
    <string name="reset_password_now">正在重置密码</string>
    <string name="reset_success_password">密码重置成功</string>
    <string name="reset_failure">密码重置失败</string>
    <string name="change_password_now">正在修改密码</string>
    <string name="change_success_password">密码修改成功</string>
    <string name="change_failure">密码修改失败</string>
    <string name="find_bluetooth">发现蓝牙</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="pwd">密码</string>
    <string name="error_bluetooth_not_supported">error_bluetooth_not_supported</string>
    <string name="unknown_device">未知设备</string>
    <string name="code_is_send_error_plz_try">验证码请求失败，请重试</string>
    <string name="second">秒</string>
    <string name="code_is_send_plz_check">验证码已发送，请注意查收</string>
    <string name="album">相册</string>
    <string name="scan_result">扫描结果</string>
    <string name="copy">复制</string>
    <string name="text_already_copied">已复制到剪贴板</string>
    <string name="bar_code">条形码：%1$s</string>
    <string name="decode_null">未发现二维码/条形码</string>
    <string name="Alignment_code">对准二维码/条形码</string>
    <string name="scan_code_open">扫描产品码开启使用</string>
    <string name="manual_input_code">或者输入产品码</string>
    <string name="camera_error">相机错误</string>
    <string name="scan_code">扫码</string>
    <string name="generate_code">造码</string>
    <string name="prompt">提示</string>
    <string name="generate_qr_code">生成二维码</string>
    <string name="select_logo">从相册选取Logo</string>
    <string name="save_qr_code">保存二维码到手机</string>
    <string name="input_qr_code_content">输入二维码中的信息</string>
    <string name="logo">Logo</string>
    <string name="generate_qrcode_please">还没有生成二维码图片呢</string>
    <string name="picture_already_save_to">图片已保存至%1$s</string>
    <string name="save_fail_retry">保存失败，请重试</string>
    <string name="local_album">本地相册</string>
    <string name="no_local_album">没有本地图片</string>
    <string name="capture">拍照</string>
    <string name="about_us">关于我们</string>
    <string name="company_web">www.bauway.com</string>
    <string name="company_phone">0755–29089555</string>
    <string name="company_address">广东省深圳市沙井街道南浦路蚝三林坡第一工业区B5栋</string>
</resources>