<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dp_28"
    android:paddingRight="@dimen/dp_28">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_20"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp10"
            android:src="@drawable/general_ic_email" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@null"
            android:hint="@string/telphone"
            android:singleLine="true"
            android:textColor="@color/black_trans60"
            android:textSize="16dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:layout_marginTop="5dp"
        android:background="@color/black" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="@dimen/dp10"
                android:src="@drawable/general_ic_password2" />

            <EditText
                android:id="@+id/pwd"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@null"
                android:drawablePadding="@dimen/dp_10"
                android:hint="@string/pwd"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/black_trans60"
                android:textSize="16dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/image_pwd"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/general_password_hidden" />

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/dp10"
        android:layout_marginTop="@dimen/dp10"
        android:text="@string/forget_pwd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/dp_20"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_btn_sure"
            android:text="@string/login"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/bg_btn_sure"
            android:text="@string/register"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>