<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <RelativeLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/blue_ice"
        android:padding="10dp">

        <ImageView
            android:id="@+id/action_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="@drawable/selector_radio_return"
            android:gravity="left|center_vertical"
            android:padding="@dimen/dp5" />

        <TextView
            style="@style/action_title"
            android:text="@string/local_album" />

        <TextView
            android:id="@+id/action_capture"
            style="@style/action_tv"
            android:layout_alignParentRight="true"
            android:text="@string/capture" />

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/action_bar">

        <ListView
            android:id="@+id/local_album_lv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/list_view_margin"
            android:layout_marginRight="@dimen/list_view_margin"
            android:cacheColorHint="@color/transparent"
            android:divider="@color/white_trans10"
            android:dividerHeight="@dimen/divider_line_thin"
            android:listSelector="@color/transparent">

        </ListView>

        <TextView
            android:id="@+id/local_album_lv_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_local_album"
            android:textColor="@color/white_trans90"
            android:textSize="16sp"
            android:visibility="gone" />

        <include layout="@layout/layout_loading" />
    </FrameLayout>
</RelativeLayout>

