<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_gravity="center_vertical"
        android:background="@color/blue_ice"
        android:padding="10dp">

        <ImageView
            android:id="@+id/iv_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:background="@drawable/shop_return2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/forget_pwd"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_28"
        android:paddingRight="@dimen/dp_28">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/shape_circle_edt_input"
            android:drawablePadding="@dimen/dp_10"
            android:hint="@string/username_reset"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:textColor="@color/black_trans60"
            android:textSize="14dp" />

        <!--验证码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/verification_code"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="3"
                android:background="@drawable/shape_circle_edt_input"
                android:hint="@string/receive_code"
                android:imeOptions="actionDone"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:singleLine="true"
                android:textColor="@color/black_trans60"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/phone_verification_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/selector_bt"
                android:clickable="true"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:text="验证码"
                android:textColor="@color/white"
                android:textSize="14dp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_circle_edt_input">

            <EditText
                android:id="@+id/pwd"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@null"
                android:hint="@string/pwd_new"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textSize="14dp"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/image_pwd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:src="@drawable/general_password_hidden" />
        </RelativeLayout>


        <!--再次确认密码-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_circle_edt_input">

            <EditText

                android:id="@+id/pwd_again"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@null"
                android:hint="@string/pwd_again"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textSize="14dp"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/image_pwd2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:src="@drawable/general_password_hidden" />
        </RelativeLayout>

        <LinearLayout
            style="@style/login_ll_two"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <Button
                android:id="@+id/pwd_bt_reset"
                style="@style/bt_style"
                android:text="@string/pwd_reset" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
